# ros2_workshop

./: .gitmodules  README.md
docker/: Dockerfile  common.yml  common_nvidia.yml
femto/: compose.yml
femto/launch/: femto_mega.launch_mod.py
femto/rviz_config/: default.rviz
gazebo/: compose.yml
gazebo/room_sim/: CMakeLists.txt  package.xml
gazebo/room_sim/config/: bridge_rgbd.yaml
gazebo/room_sim/launch/: room_rgbd.launch.py
gazebo/room_sim/worlds/: room_two_rgbd.sdf
interactive_sensor_calibration/: compose.yml
interactive_sensor_calibration/sensor_calibration/: CMakeLists.txt  package.xml
interactive_sensor_calibration/sensor_calibration/include/sensor_calibration/: interactive_tf_calib.hpp
interactive_sensor_calibration/sensor_calibration/src/: interactive_tf_calib.cpp
message_filters/: compose.yml
message_filters/sync_demo/: CMakeLists.txt  package.xml
message_filters/sync_demo/include/sync_demo/: sync_component.hpp
message_filters/sync_demo/src/: sync_component.cpp
pluginlib/: compose.yml
pluginlib/docker/: Dockerfile  compose.yml  ros_entrypoint.sh
pluginlib/polygon_base/: CMakeLists.txt  package.xml
pluginlib/polygon_base/include/polygon_base/: regular_polygon.hpp
pluginlib/polygon_base/src/: area_node.cpp
pluginlib/polygon_plugins/: package.xml
pointcloud/: compose.yml
pointcloud/pointcloud_demo/: CMakeLists.txt  package.xml
pointcloud/pointcloud_demo/include/pointcloud_demo/: demo_component.hpp
pointcloud/pointcloud_demo/src/: demo_component.cpp
pointcloud/pointcloud_segmentation/: CMakeLists.txt  package.xml
pointcloud/pointcloud_segmentation/config/: params.yaml
pointcloud/pointcloud_segmentation/include/pointcloud_segmentation/: segmentation_component.hpp
pointcloud/pointcloud_segmentation/launch/: pointcloud_segmentation.launch.py
pointcloud/pointcloud_segmentation/src/: segmentation_component.cpp
ros_demos/: compose-tb3.yml  compose-tiago.yml  compose.yml
zero_copy_transport/: compose.yml
zero_copy_transport/zero_copy_demo/: CMakeLists.txt  package.xml
zero_copy_transport/zero_copy_demo/src/: zero_copy.cpp
