<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_segmentation</name>
  <version>0.0.0</version>
  <description>Approx-sync two clouds, TF to map, merge, voxel, height filter, cluster, publish colored clusters.</description>
  <maintainer email="knofm@hs-weingarten.de">iki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <!-- PCL runtime -->
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-kdtree</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

